# NumerosYCalculos

./: .gitignore  CMakeLists.txt  LICENSE  README.html  README.md  combinatorics.hpp  factorial_lookup_table.hpp  gemini.md  integer_ops.hpp
.tmp.driveupload/: 677  681  685
include/core/: math_errors.hpp  nyc_type_traits.hpp
include/math/: combinatorics.hpp  factorial.hpp  integer_ops.hpp
include/math/internal/: factorial_lookup_table.hpp  lookup_tables.hpp
include/numbers_calculations/core/: constexpr_literals.hpp  extended_type_traits.hpp  math_errors.hpp  numeric_io.hpp
include/numbers_calculations/math/: combinatorics.hpp  factorial.hpp  integer_ops.hpp
include/numbers_calculations/math/internal/: factorial_lookup_table.hpp  lookup_tables.hpp
scripts/: .gitkeep  build_multi_final.bat  build_simple.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_combinatorics.cpp  test_factorial.cpp
